--- a/Python_heroku_vercel_task/vercel.json
+++ b/Python_heroku_vercel_task/vercel.json
@@ -1,12 +1,12 @@
 {
-    "build":[
+    "builds":[{
         "src": "Python_heroku_vercel_task/python_heroku_task/wsgi.py",
         "use": "@versel/python",
         "config": {
             "maxLambdaSize": "15mb",
             "runtime": "python3.12"
         }
-    ],
+    }],
     "routes": [
         {
             "src": "/(.*)",
