--- a/Python_heroku_vercel_task/vercel.json
+++ b/Python_heroku_vercel_task/vercel.json
@@ -1,6 +1,6 @@
 {
     "builds":[{
-        "src": "Python_heroku_vercel_task/python_heroku_task/wsgi.py",
+        "src": "python_heroku_task/wsgi.py",
         "use": "@versel/python",
         "config": {
             "maxLambdaSize": "15mb",
