--- a/Python_heroku_vercel_task/vercel.json
+++ b/Python_heroku_vercel_task/vercel.json
@@ -10,7 +10,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "Python_heroku_vercel_task/python_heroku_task/wsgi.py"
+            "dest": "python_heroku_task/wsgi.py"
         }
     ]
 }
